fixes post format quote styling issue on small screens | fixes #74

--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -813,6 +813,10 @@ $cards-gutter: $gutter;
 		background-size: cover;
 		background-position: center center;
 
+		@include query-below($xsmall) {
+			padding-left: 24px;
+		}
+
 		a {
 			box-shadow: inset 0 -3px 0 $accent;
 			color: white;
